loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:2: error: ';' expected but 'else' found.
else{forward} 
^